--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,11 @@
 
     <string name="action_currency">Currency</string>
 
+    <string name="d_ruble_txt">Ruble (₽)</string>
+    <string name="d_dollar_txt">Euro (€)</string>
+    <string name="d_euro_txt">Euro (€)</string>
+    <string name="d_currency_title">Currency</string>
+    <string name="d_ok_button">OK</string>
+    <string name="d_cancel_button">Cancel</string>
+
 </resources>
