--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,12 +17,15 @@
     <string name="toast_no_products_quantity">Insert quantity of product!</string>
 
     <string name="action_currency">Currency</string>
+    <string name="action_about">About</string>
 
-    <string name="d_ruble_txt">Ruble (₽)</string>
-    <string name="d_dollar_txt">Euro (€)</string>
-    <string name="d_euro_txt">Euro (€)</string>
+    <string name="d_ruble_txt">RUB (₽)</string>
+    <string name="d_dollar_txt">USD ($)</string>
+    <string name="d_euro_txt">EUR (€)</string>
     <string name="d_currency_title">Currency</string>
     <string name="d_ok_button">OK</string>
     <string name="d_cancel_button">Cancel</string>
+    <string name="d_about_title">About</string>
+    <string name="d_about_message">Shopping Helper v0.1</string>
 
 </resources>
