--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,6 +28,6 @@
     <string name="d_about_title">About</string>
     <string name="d_about_message">Shopping Helper v0.1</string>
 
-    <string name="main_hint_text">Insert Price and Amount of product\n and press OK button</string>
+    <string name="hint_main">Insert Price and Amount of product\n and press OK button</string>
 
 </resources>
