--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="kilogram">kg</string>
     <string name="liter">l</string>
     <string name="milliliter">ml</string>
+    <string name="piece">pcs</string>
 
     <string name="item_title_neutral">Overpay:</string>
     <string name="item_title_best">Best price!</string>
