--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,8 +27,10 @@
     <string name="d_ok_button">OK</string>
     <string name="d_cancel_button">Cancel</string>
     <string name="d_about_title">About</string>
-    <string name="d_about_message">Shopping Helper v0.1</string>
+    <string name="d_about_message">Price Equalizer v0.1</string>
 
     <string name="hint_main">Insert Price and Amount of product\n and press OK button</string>
+
+    <string name="btn_unit_title">Unt</string>
 
 </resources>
