--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Price Equalizer</string>
+    <string name="app_name">Simple Price Calculator</string>
 
     <string name="ruble">₽</string>
     <string name="dollar">$</string>
