--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -15,7 +15,7 @@
     <string name="centimeter">см</string>
 
     <string name="item_title_neutral">Переплата:</string>
-    <string name="item_title_best">Лучшая цена!</string>
+    <string name="item_title_best">\u0020Выгодно!\u0020</string>
     <string name="item_title_worst">Худшая цена!</string>
 
     <string name="toast_no_products_quantity">Введите кол-во товара!</string>
