Changed app name. Version number in about dialog is taken from build.gradle

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Простой калькулятор цен</string>
+    <string name="app_name">Калькулятор Цена за кг</string>
 
     <string name="ruble">р.</string>
     <string name="dollar">$</string>
@@ -30,7 +30,7 @@
     <string name="d_ok_button">OK</string>
     <string name="d_cancel_button">Отмена</string>
     <string name="d_about_title">О программе</string>
-    <string name="d_about_message">Калькулятор цен v1.1</string>
+    <string name="d_about_message">Калькулятор цен v</string>
 
     <string name="hint_main">Введите стоимость и кол-во товара\n и нажмите кнопку ОК</string>
 
