--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple Price Calculator</string>
+    <string name="app_name">Calculator Price per kg</string>
 
     <string name="ruble">₽</string>
     <string name="dollar">$</string>
@@ -30,7 +30,7 @@
     <string name="d_ok_button">OK</string>
     <string name="d_cancel_button">Cancel</string>
     <string name="d_about_title">About</string>
-    <string name="d_about_message">Price Calculator v1.1</string>
+    <string name="d_about_message">Price Calculator v</string>
 
     <string name="hint_main">Insert Price and Amount of product\n and press OK button</string>
 
